add basic html form input and minimal styling

--- a/src/index.html
+++ b/src/index.html
@@ -4,5 +4,32 @@
     <title>RPG</title>
   </head>
   <body>
+    <div class="container">
+      <h1>Starlet RPG</h1>
+      <form>
+        <h3>Pick Your Character:</h3>
+        <div class="form-check form-check-inline">
+          <img src="img/boyband.svg" alt="boy band member"><br>
+          <input class="form-check-input" type="radio" name="class" id="boyband" value="1" checked>
+          <label class="form-check-label">Boy Band Member</label>
+        </div>
+        <div class="form-check form-check-inline">
+          <img src="img/enthusiast.svg" alt="hollywood enthusiast">
+          <input class="form-check-input" type="radio" name="class" id="enthusiast" value="2">
+          <label class="form-check-label">Hollywood Enthusiast</label>
+        </div>
+        <div class="form-check form-check-inline">
+          <img src="img/homely.svg" alt="homely actor"><br>
+          <input class="form-check-input" type="radio" name="class" id="homelyactor" value="3">
+          <label class="form-check-label">Homely Actor</label>
+        </div>
+        <div class="form-check form-check-inline">
+          <img src="img/savant.svg" alt="Skilled Savant"><br>
+          <input class="form-check-input" type="radio" name="class" id="savant" value="4">
+          <label class="form-check-label">Skilled Savant</label>
+        </div>
+        <button type="submit" class="btn btn-primary">CONFIRM CHARACTER</button>
+      </form>
+    </div>
   </body>
 </html>
