add character sheet and submit function to generate character type

--- a/src/index.html
+++ b/src/index.html
@@ -30,6 +30,17 @@
         </div>
         <button type="submit" class="btn btn-primary">CONFIRM CHARACTER</button>
       </form>
+      <div class="character-sheet">
+        <p>
+          Fame: <span class="character-fame"></span><br>
+          Hotness: <span class="character-hotness"></span><br>
+          Talent: <span class="character-talent"></span><br>
+          Esteem: <span class="character-esteem"></span><br>
+          Finances: <span class="character-finances"></span><br>
+          Exp: <span class="character-exp"></span><br>
+          Inventory: <span class="character-inventory"></span>
+        </p>
+      </div>
     </div>
   </body>
 </html>
