add store and battle divs

--- a/src/index.html
+++ b/src/index.html
@@ -30,16 +30,30 @@
         </div>
         <button type="submit" class="btn btn-primary">CONFIRM CHARACTER</button>
       </form>
-      <div class="character-sheet">
-        <p>
-          Fame: <span class="character-fame"></span><br>
-          Hotness: <span class="character-hotness"></span><br>
-          Talent: <span class="character-talent"></span><br>
-          Esteem: <span class="character-esteem"></span><br>
-          Finances: <span class="character-finances"></span><br>
-          Exp: <span class="character-exp"></span><br>
-          Inventory: <span class="character-inventory"></span>
-        </p>
+      <div class="row game-interface">
+        <div class="col-4">
+          <div class="character-sheet">
+            <div class="character-image"></div>
+            <p>
+              Fame: <span class="character-fame"></span><br>
+              Hotness: <span class="character-hotness"></span><br>
+              Talent: <span class="character-talent"></span><br>
+              Esteem: <span class="character-esteem"></span><br>
+              Finances: <span class="character-finances"></span><br>
+              Exp: <span class="character-exp"></span><br>
+              Inventory: <span class="character-inventory"></span>
+            </p>
+          </div>
+        </div>
+        <div class="col-4">
+          <!-- Battles -->
+        </div>
+        <div class="col-4">
+          <div class="store">
+            <h3>Store</h3>
+            <img class="item" data-item="makeup">
+          </div>
+        </div>
       </div>
     </div>
   </body>
