add labels and hover css for battles and purchases

--- a/src/index.html
+++ b/src/index.html
@@ -46,15 +46,15 @@
         </div>
         <div class="col-3 battle">
           <h3 class="text-center">Battle</h3>
-          <img class="battletype" data-battletype="audition" src="img/audition.svg">
-          <img class="battletype" data-battletype="performance" src="img/performance.svg">
-          <img class="battletype" data-battletype="awards" src="img/awards.svg">
+          <img class="battletype" data-battletype="audition" src="img/audition.svg"><p>Audition</p>
+          <img class="battletype" data-battletype="performance" src="img/performance.svg"><p>Performance</p>
+          <img class="battletype" data-battletype="awards" src="img/awards.svg"><p>Awards Ceremony</p>
         </div>
         <div class="col-3 store">
           <h3 class="text-center">Store</h3>
-          <img class="item" data-item="makeup" src="img/makeup.svg">
-          <img class="item" data-item="hairspray" src="img/hairspray.svg">
-          <img class="item" data-item="acting" src="img/acting.svg">
+          <img class="item" data-item="makeup" src="img/makeup.svg"><p>$20 Makeup</p>
+          <img class="item" data-item="hairspray" src="img/hairspray.svg"><p>$40 Hairspray</p>
+          <img class="item" data-item="acting" src="img/acting.svg"><p>$150 Method Acting</p>
         </div>
       </div>
     </div>
