add consume inventory functionality

--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
           <img src="img/savant.svg" alt="Skilled Savant"><br>
           <input class="form-check-input" type="radio" name="class" id="savant" value="4">
           <label class="form-check-label">Skilled Savant</label>
-        </div>
+        </div><br>
         <button type="submit" class="btn btn-primary">CONFIRM CHARACTER</button>
       </form>
       <div class="row game-interface">
@@ -54,7 +54,7 @@
           <h3 class="text-center">Store</h3>
           <img class="item" data-item="makeup" src="img/makeup.svg"><p>$20 Makeup</p>
           <img class="item" data-item="hairspray" src="img/hairspray.svg"><p>$40 Hairspray</p>
-          <img class="item" data-item="acting" src="img/acting.svg"><p>$150 Method Acting</p>
+          <img class="item" data-item="acting" src="img/methodacting.svg"><p>$150 Method Acting</p>
         </div>
       </div>
     </div>
