add css for hovering over images, add click css animation

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
   <body>
     <div class="container">
       <h1>Starlet RPG</h1>
+      <!-- Character Select -->
       <form>
         <h3>Pick Your Character:</h3>
         <div class="form-check form-check-inline">
@@ -30,6 +31,7 @@
         </div><br>
         <button type="submit" class="btn btn-primary">CONFIRM CHARACTER</button>
       </form>
+      <!-- Game Interface -->
       <div class="row game-interface">
         <div class="col-4 character-sheet">
           <div class="character-image">
@@ -41,7 +43,7 @@
             Esteem: <span class="character-esteem"></span><br>
             Finances: <span class="character-finances"></span><br>
             Exp: <span class="character-exp"></span><br>
-            Inventory: <span class="character-inventory"></span>
+            Inventory (Max of 10):<br><span class="character-inventory text-center"></span>
           </p>
         </div>
         <div class="col-3 battle">
